<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.example.amolabs.MainActivity">
    <item android:title="@string/lab1task1" android:orderInCategory="101" android:id="@+id/lab1task1"
          android:enabled="true" android:visible="true" android:checkable="false"/>
    <item android:title="@string/menu_lab1task2" android:orderInCategory="102" android:id="@+id/lab1task2"/>
    <item android:title="@string/menu_lab1task3" android:orderInCategory="103" android:id="@+id/lab1task3"/>
    <item android:title="ЛР2" android:orderInCategory="104" android:id="@+id/lab2"/>
    <item android:title="ЛР3" android:orderInCategory="105" android:id="@+id/lab3"/>
</menu>
