<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_lab1_task1"
        tools:context=".Lab1Task1">

    <TextView
            android:text="@string/_1_1"
            android:layout_width="355dp"
            android:layout_height="20dp" android:id="@+id/textView"
            android:layout_marginTop="28dp" app:layout_constraintTop_toTopOf="parent"
            android:textSize="18sp" android:layout_marginStart="24dp" app:layout_constraintStart_toStartOf="parent"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:ems="10"
            android:id="@+id/editText"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:hint="@string/a"
            android:layout_marginStart="24dp" app:layout_constraintStart_toStartOf="parent"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:ems="10"
            android:id="@+id/editText2"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/editText" android:hint="@string/b"
            android:layout_marginStart="24dp" app:layout_constraintStart_toStartOf="parent"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:ems="10"
            android:id="@+id/editText3"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/editText2" android:hint="@string/c"
            android:layout_marginStart="24dp" app:layout_constraintStart_toStartOf="parent"
    />
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/editText6" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/editText3"
            android:hint="@string/d" android:inputType="numberSigned" android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <Button
            android:text="@string/calculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/editText6"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"/>
</android.support.constraint.ConstraintLayout>