<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_lab1_task2"
        tools:context=".Lab1Task2">

    <TextView
            android:text="@string/lab1_task2_header"
            android:layout_width="292dp"
            android:layout_height="31dp"
            android:id="@+id/textView7" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" android:textSize="18sp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:ems="10"
            android:id="@+id/editText4" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textView7" android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent" android:hint="@string/k_param"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:ems="10"
            android:id="@+id/editText5" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/editText4" android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent" android:hint="@string/param_a"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:ems="10"
            android:id="@+id/editText7"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/editText5"
            android:hint="@string/param_c"/>
    <Button
            android:text="@string/calculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button2" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/editText7"/>
</android.support.constraint.ConstraintLayout>