<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_main"
        tools:context=".MainActivity">
    <TextView
            android:text="@string/main_1"
            android:layout_width="259dp"
            android:layout_height="43dp"
            android:id="@+id/textView2"
            android:layout_marginTop="36dp" app:layout_constraintTop_toTopOf="parent"
            android:fontFamily="sans-serif-black" android:typeface="serif" android:textSize="24sp"
            android:textColor="@android:color/black" android:layout_marginStart="36dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="@string/main_2"
            android:layout_width="258dp"
            android:layout_height="44dp"
            android:id="@+id/textView3" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:textSize="24sp" android:typeface="serif"
            android:fontFamily="sans-serif-black" android:textColor="@android:color/black"
            android:layout_marginStart="36dp" app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="@string/main_3"
            android:layout_width="337dp"
            android:layout_height="46dp"
            android:id="@+id/textView4"
            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:textSize="24sp" android:typeface="serif" android:fontFamily="sans-serif-black"
            android:textColor="@android:color/background_dark" android:layout_marginStart="36dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="@string/main_4"
            android:layout_width="280dp"
            android:layout_height="49dp"
            android:id="@+id/textView5"
            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/textView4"
            android:textSize="24sp" android:fontFamily="sans-serif-black" android:typeface="serif"
            android:textColor="@android:color/black" android:layout_marginStart="36dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="@string/main_5"
            android:layout_width="243dp"
            android:layout_height="37dp"
            android:id="@+id/textView6" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            android:typeface="serif" android:fontFamily="sans-serif-black"
            android:textSize="24sp" android:textColor="@android:color/background_dark" android:layout_marginStart="36dp"
            app:layout_constraintStart_toStartOf="parent"/>
</android.support.constraint.ConstraintLayout>