<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_lab1_task3"
        tools:context=".Lab1Task3">

    <TextView
            android:text="@string/lab1_task3_header"
            android:layout_width="354dp"
            android:layout_height="40dp"
            android:id="@+id/textView8" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="28dp" android:textSize="18sp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/l1t3pA" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/textView8" android:layout_marginStart="28dp"
            app:layout_constraintStart_toStartOf="parent" android:hint="@string/a"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/l1t3pB" android:layout_marginStart="28dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/l1t3pA" android:hint="@string/b"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/l1t3pP" android:layout_marginStart="28dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/l1t3pB" android:hint="Параметр p"/>
    <Button
            android:text="@string/calculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button3" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="28dp"
            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/l1t3pP"/>
</android.support.constraint.ConstraintLayout>